fix align css hebergement

--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,6 @@ a { color: black; text-decoration: none;}
             font-size: 0.9em;}
 
         .cards {
-        width: 100%;
         background-color: white;
         border-radius: 1em;  
         box-shadow: 1px 1px 10px 1px #ccc;
